cabal-version:      2.4
name:               konna2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Eashan Hatti
maintainer:         eashanhatti@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable konna2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Var, Core, Eval, Surface, Unification, Elaboration, Parsing

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0, containers^>=0.6.4.1, mtl, array
    hs-source-dirs:   app
    default-language: Haskell2010
